Better animations to context menu Patches for 1.21.11 Refactor to improve package names Made rounded rectangles and circles work Fix mouse actions in context menu Improvements to library